cmake_minimum_required(VERSION 3.10...3.16)

project(NumbersIsHealth)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

FIND_PACKAGE(FLTK REQUIRED)

SET(Boost_USE_STATIC_LIBS ON)

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(LibXml2 REQUIRED)
ADD_SUBDIRECTORY(tidy-html5 tidy-html5)

ADD_EXECUTABLE(LottoGUI
        LottoGUI.cxx
        LottoGUI.h)
TARGET_INCLUDE_DIRECTORIES(LottoGUI PRIVATE ${FLTK_INCLUDE_DIRS})

MESSAGE(STATUS ${FLTK_INCLUDE_DIRS})

TARGET_LINK_DIRECTORIES(LottoGUI PRIVATE mingw32/i686-w64-mingw32)
TARGET_LINK_LIBRARIES(LottoGUI ssl crypto fltk ${Boost_LIBRARIES})
IF(${WIN32})
    TARGET_LINK_LIBRARIES(LottoGUI mingw32 ws2_32 wsock32)
ENDIF()
IF(${UNIX})
    TARGET_LINK_LIBRARIES(LottoGUI pthread)
ENDIF()